--- a/HW2/BAP_HW_2.ipynb
+++ b/HW2/BAP_HW_2.ipynb
@@ -232,7 +232,12 @@
     "\n",
     "<br>\n",
     "$$\\large{\n",
-    "\\text{YOUR ANSWER HERE}\n",
+    "\\text{ANSWER}\\\\\n",
+    "\\ln{posterior} = \\ln{likelihood} + \\ln{prior}\\\\\n",
+    "prior = \\sqrt{\\frac{\\tau_0}{2\\pi}}\\exp{\\Big(-\\frac{\\tau_0(\\mu-\\mu_0)^2}{2}\\Big)}\\\\\n",
+    "\\ln{prior} = \\ln{\\Big(\\sqrt{\\frac{\\tau_0}{2\\pi}}\\Big)} - \\frac{1}{2}(\\tau_{0}\\mu^2 - 2\\tau_{0}\\mu_{0}\\mu + \\tau_{0}\\mu_{0}^2)\\\\\n",
+    "\\ln{posterior} = -\\frac{1}{2}\\Big(- 2\\sum_{i=1}^N x_i\\mu  + N\\mu^2 \\Big) + \\text{const} - \\frac{1}{2}(\\tau_{0}\\mu^2 - 2\\tau_{0}\\mu_{0}\\mu) + \\text{const}\\\\ \n",
+    "= -\\frac{1}{2}\\Big( (N + \\tau_0)\\mu^2 -2(\\sum_{i=1}^N x_i + \\tau_0\\mu_0)\\mu\\Big) + \\text{const}\n",
     "}$$\n",
     "<br>\n",
     "$$\\large{\n",
@@ -255,13 +260,19 @@
     "\n",
     "<br>\n",
     "$$\\large{\n",
-    "\\text{YOUR ANSWER HERE}\n",
+    "\\text{ANSWER}\\\\\n",
+    "posterior = \\text{const}*\\exp{\\Big( -\\frac{(x_{i} - \\mu)^2}{2}\\Big)}\\exp{\\Big(-\\frac{\\tau_0(\\mu-\\mu_0)^2}{2}\\Big)}\\\\\n",
+    "= \\text{const}\\exp{\\Big( -\\frac{1}{2}((x_{i} - \\mu)^2 +\\tau_0(\\mu-\\mu_0)^2)\\Big)}.\\\\\n",
+    "(x_{i} - \\mu)^2 +\\tau_0(\\mu-\\mu_0)^2 = (1 + \\tau_{0})\\mu^2 - 2(\\tau_{0}\\mu{0} + x)\\mu \\\\\n",
+    "= \\frac{\\mu - \\frac{\\tau_{0}\\mu_{0} + x}{1 + \\tau_0}}{\\frac{1}{1 + \\tau_0}} + \\text{const}.\\\\\n",
+    "posterior = \\text{const}*\\exp{\\Big(-\\frac{\\mu - \\frac{\\tau_{0}\\mu_{0} + x}{1 + \\tau_0}}{\\frac{2}{1 + \\tau_0}} \\Big)}\n",
     "}$$\n",
+    "\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\large{p(\\mu | \\mathcal{D}, \\mu_0, \\tau_0) = \\mathcal{N}(\\mu | \\hat{\\mu}, \\hat{\\sigma}^2), \\quad \\text{where} \\\\ \\boxed{\\hat{\\mu} = ? \\quad \\hat{\\sigma}^2 = ?}\n",
+    "\\large{p(\\mu | \\mathcal{D}, \\mu_0, \\tau_0) = \\mathcal{N}(\\mu | \\hat{\\mu}, \\hat{\\sigma}^2), \\quad \\text{where} \\\\ \\boxed{\\hat{\\mu} = \\frac{x + \\mu_{0}\\tau_{0}}{\\tau_{0} +1} \\quad \\hat{\\sigma}^2 = \\frac{1}{\\tau_{0} + 1}}\n",
     "}$$\n",
     "\n",
     "$\\textbf{Note:}\\ \\boxed{\\large{ \\ln p(\\theta | X) = \\ln(X|\\theta) + \\ln p(\\theta) + \\text{const}}}$\n",
