Finish HW2 in (HW2_new)

--- a/Lecture2/BayesianLinearRegression.ipynb
+++ b/Lecture2/BayesianLinearRegression.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "* Graphical notation\n",
     "<br>\n",
-    "<img src='B_LR.png' width=800>"
+    "<img src='B_Lr.png' width=800>"
    ]
   },
   {
