--- a/HW3/Homework3-20200124/BAP_HW_3.ipynb
+++ b/HW3/Homework3-20200124/BAP_HW_3.ipynb
@@ -129,6 +129,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,7 +479,7 @@
     "}$$\n",
     "<br><br>\n",
     "$$\\lrg{\n",
-    "-\\ln p(X | \\alpha) \\propto -const + \\ln \\Gamma(\\sumK \\alpha_k) + \\sumK  \\ln \\Gamma(\\alpha_k + x_k) - \\sumK \\ln \\Gamma(\\alpha_k) - \\ln \\Gamma(\\sumK \\alpha_k + x_k)\n",
+    "-\\ln p(X | \\alpha) =\n",
     "}$$"
    ]
   },
@@ -485,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +500,10 @@
     "def neg_evidence(alpha,X):\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    \n",
+    "    alpha_hat = X.sum(axis = 0) + alpha\n",
+    "    neg_ev_log = - ( loggamma(alpha_sum()) - loggamma(alpha).sum() \n",
+    "                    + loggamma(alpha_hat).sum() - loggamma(alpha_hat.sum()) )\n",
+    "    neg_ev = np.exp(neg_ev_log)\n",
     "    \n",
     "    \n",
     "    return neg_ev "
@@ -701,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,14 +723,15 @@
     "    W = np.empty((M,N,V),dtype=np.bool)    \n",
     "    alpha = alpha_0 * 7\n",
     "    # YOUR CODE HERE\n",
-    "    theta = dirichlet.rvs(alpha, random_state = 42)[0]\n",
-    "    for i in range(N):\n",
-    "        for m in range(M):\n",
-    "            for k in range(K): \n",
-    "                Z[m,i,k] = theta[k] \n",
-    "                \n",
-    "            for v in range(V):\n",
-    "                W[m,i,v] = multinomial.rvs(1, theta, random_state = 42)\n",
+    "    \n",
+    "    for m in range(M):\n",
+    "        theta = dirichlet.rvs(alpha, random_state = 42)[0]\n",
+    "        for i in range(N):\n",
+    "        z_n = multinomial.rvs(n = 1, p = theta[0])\n",
+    "        w_n = multinomial.rvs(n = 1, p = beta[z_n][0]).astype(bool)\n",
+    "        Z[m,n] = z_n\n",
+    "        W[m,n] = w_n\n",
+    "        \n",
     "    \n",
     "    return W,Z,theta"
    ]
