till 4.1 but lambd is not correctly scaled

--- a/HW3/Homework3-20200124/BAP_HW_3.ipynb
+++ b/HW3/Homework3-20200124/BAP_HW_3.ipynb
@@ -463,6 +463,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5000, 3)\n",
+      "(5000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_sample.shape)\n",
+    "print(space_range.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -668,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
